crates/integration-tests/src/tests/snapshots/integration_tests__tests__expressions__evaluates_field_name_that_requires_escaping.snap
---
source: crates/integration-tests/src/tests/expressions.rs
expression: "graphql_query(r#\"\n                query {\n                  testCases_weirdFieldNames(where: { invalidName: { _eq: 3 } }) {\n                    invalidName\n                  }\n                }\n            \"#).run().await?"
---
data:
  testCases_weirdFieldNames:
    - invalidName: 3
errors: ~
