crates/integration-tests/src/tests/snapshots/integration_tests__tests__expressions__evaluates_field_name_that_requires_escaping_in_nested_expression.snap
---
source: crates/integration-tests/src/tests/expressions.rs
expression: "graphql_query(r#\"\n                query Filtering {\n                  extendedJsonTestData(where: { value: { _regex: \"hello\" } }) {\n                    type\n                    value\n                  }\n                }\n            \"#).run().await?"
---
data:
  extendedJsonTestData:
    - type: string
      value: "hello, world!"
errors: ~
