crates/integration-tests/src/tests/snapshots/integration_tests__tests__expressions__exists_in_nested_collection_without_predicate_with_escaped_field_name.snap
---
source: crates/integration-tests/src/tests/expressions.rs
expression: "run_connector_query(Connector::TestCases,\n            query_request().collection(\"weird_field_names\").query(query().predicate(Expression::Exists {\n                                in_collection: ExistsInCollection::NestedCollection {\n                                    column_name: \"$invalid.array\".into(),\n                                    arguments: Default::default(),\n                                    field_path: Default::default(),\n                                },\n                                predicate: None,\n                            }).fields([field!(\"_id\"),\n                                field!(\"invalid_array\" => \"$invalid.array\",\n                                    array!(object!([field!(\"invalid_element\" =>\n                                    \"$invalid.element\")])))]).order_by([asc!(\"$invalid.name\")]))).await?"
---
- rows:
    - _id: 66cf91a0ec1dfb55954378bd
      invalid_array:
        - invalid_element: 1
    - _id: 66cf9230ec1dfb55954378be
      invalid_array:
        - invalid_element: 2
    - _id: 66cf9274ec1dfb55954378bf
      invalid_array:
        - invalid_element: 3
    - _id: 66cf9295ec1dfb55954378c0
      invalid_array:
        - invalid_element: 4
